<resources>
    <string name="app_name">Ano</string>
    <string name="welcome_to_ano">Welcome to Ano</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_to_ano_">Welcome to ANO</string>
    <string name="forget_password">forget password?</string>
    <string name="new_user_signup">New User? SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="already_user_login">Already user? Login</string>
    <string name="full_name">Full Name</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="long_text">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.</string>
    <string name="header_text">Header</string>
    <string name="header_title">header_title</string>
    <string name="about"><![CDATA[Abhinay Sirohi & Abhishek Singh]]></string>
    <string name="app_india_line">© 2022 Made with Love in India ♥</string>
    <string name="ano_contacts_file">ano_contacts_file</string>
    <string name="feature">Feature</string>
    <string name="menu">Menu</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="new_group">New Group</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_menu">About</string>
    <string name="email">Email</string>
    <string name="user_data_pref_file">USER_DATA_PREF_FILE</string>

</resources>