<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item01"
        android:title="@string/menu"
        >

        <menu>

            <group
                android:id="@+id/main_item"
                android:checkableBehavior="single"
                >

                <item
                    android:id="@+id/chat_item"
                    android:title="@string/chat"
                    android:checked="true"
                    android:icon="@drawable/ic_baseline_chat_bubble_outline_24"/>
                <item
                    android:id="@+id/contact_item"
                    android:title="@string/contacts"
                    android:icon="@drawable/ic_baseline_person_outline_24"/>

                <item
                    android:id="@+id/profile_item"
                    android:title="@string/new_group"
                    android:icon="@drawable/ic_baseline_people_24"/>

                <item
                    android:id="@+id/setting_item"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_baseline_settings_24"/>

            </group>

        </menu>





    </item>


    <item
        android:title="@string/feature"
        >
        <menu>
            <group android:id="@+id/main_item2"
                android:checkableBehavior="single"
                >
            <item
                android:id="@+id/share_item"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share_24"/>
            <item
                android:id="@+id/favourites_item"
                android:title="@string/about_menu"
                android:icon="@drawable/ic_baseline_info_24"/>
            </group>
        </menu>
    </item>

</menu>