<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"

    tools:context=".authentication.LoginActivity">

<!--    Trocchi-->
<!--    Agrandir Medium-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@drawable/login_signup_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_ano_"
                    android:textSize="32sp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginTop="48dp"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="50dp"
                    android:textColor="@color/white"
                    />

                <EditText
                    android:id="@+id/username"
                    android:labelFor="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/text_view_background"
                    android:inputType="textPersonName"
                    android:autofillHints="emailAddress"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="18dp"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="50dp"
                    android:textColor="@color/white"
                    />

                <EditText
                    android:id="@+id/user_password"
                    android:labelFor="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="password"
                    android:textColor="@color/yellow"
                    android:background="@drawable/text_view_background"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_marginTop="18dp"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/LoginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingHorizontal="80dp"
                    android:layout_marginTop="56dp"
                    android:textColor="@color/white"
                    android:background="@drawable/login_btn_background"
                    android:textSize="20sp"
                    android:text="@string/login"
                    android:textAllCaps="false" />


                <TextView
                    android:id="@+id/signup_activity_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user_signup"
                    android:layout_marginTop="28dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    />



            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:indeterminateTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminate="true"
                />
        </FrameLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>